--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradientbg"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textViewTemperature"
+        android:drawableLeft="@drawable/ic_baseline_location_on_24"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="224dp"
         android:layout_marginEnd="24dp"
-        android:textSize="24sp"
+        android:textSize="44sp"
         app:layout_constraintEnd_toEndOf="@id/textViewName"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/TextViewWindspeed"
+        android:drawableLeft="@drawable/ic_baseline_air_24"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="360dp"
         android:layout_marginEnd="24dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/textViewName"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/latLong"
+        android:id="@+id/pressureView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="404dp"
         android:layout_marginEnd="24dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/textViewName"
@@ -46,11 +49,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/latLong2"
+        android:id="@+id/humidityView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="356dp"
+        android:layout_marginTop="448dp"
+        android:layout_marginEnd="24dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@id/textViewName"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/feelslikeView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="492dp"
         android:layout_marginEnd="24dp"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/textViewName"
@@ -60,26 +76,29 @@
 
     <TextView
         android:id="@+id/textViewName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="363dp"
+        android:layout_height="68dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="24dp"
-        android:textSize="30sp"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textViewWeatherDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="24dp"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="@id/textViewName"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,37 +106,43 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="160dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="84dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="126dp"
         android:background="@color/teal_200"
-        android:backgroundTint="#00BCD4"
+        android:backgroundTint="#74ABB3"
         android:onClick="updateWeather"
-        android:text="Update"
+        android:text="@string/Search_button"
+        android:textColor="#FFFFFF"
         android:textColorHighlight="#050303"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#2196F3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userInput"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="160dp"
         android:layout_height="55dp"
-        android:layout_marginStart="37dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginStart="127dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginBottom="68dp"
         android:background="@color/teal_200"
         android:backgroundTint="#00BCD4"
         android:onClick="startGPS"
-        android:text="Forecast"
+        android:text="@string/current_location"
+        android:textColor="#5E35B1"
         android:textColorHighlight="#050303"
         android:textColorHint="#FFFFFF"
         android:textColorLink="#2196F3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/userInput"
@@ -126,8 +151,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:autofillHints=""
         android:ems="10"
+        android:hint="@string/Search"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="#EFE7E7"
+        android:textColorHint="#F3E5F5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
